--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -30,156 +30,216 @@
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">very-long-repository-name-and-and-and</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="../img/avatar.svg">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">very-long-repository-name-and-and-and</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="../img/avatar.svg">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">very-long-repository-name-and-and-and</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="../img/avatar.svg">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">very-long-repository-name-and-and-and</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="../img/avatar.svg">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">very-long-repository-name-and-and-and</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
 
             <div class="git-repo-tile">
                 <div class="git-repo-tile__content">
-                    <div class="git-repo-tile__heading">kts-school-frontend</div>
-                    <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
-                    <div class="git-repo-tile__stats">
-                        <div class="stars">
-                            <img src="../img/star.svg"><span>123</span>
+                    <div class="git-repo-tile__avatar">
+                        <img src="">K
+                    </div>
+                    <div class="git-repo-tile__info">
+                        <div class="git-repo-tile__heading">kts-school-frontend</div>
+                        <a class="git-repo-tile__org-link" href="#" target="_blank">ktsstudio</a>
+                        <div class="git-repo-tile__stats">
+                            <div class="stars">
+                                <img class="stars__img" src="../img/star.svg"><span>123</span>
+                            </div>
+                            <div class="updated">Updated 21 Jul</div>
                         </div>
-                        <div class="updated">Updated 21 Jul</div>
                     </div>
                 </div>
             </div>
