--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -18,11 +18,9 @@ body {
     display: grid;
     align-items: center;
 
-    grid-template-rows: 50px 104px;
+    grid-template-rows: 50px 1440px;
     grid-row-gap: 20px;
 }
-
-
 
 
 /* Search */
@@ -38,9 +36,8 @@ body {
 }
 
 .search__input {
-    width: 295px;
-    height: 50px;
-    padding-left: 12px;
+    padding: 15.5px 2px 15.5px 12px;
+    line-height: 16px;
 
     background-color: #FFFFFF;
     border: 1.5px solid #D9D9D9;
@@ -59,7 +56,6 @@ body {
 }
 
 .search__input::placeholder {
-    display: flex;
     align-items: center;
 
     color: #7E7E7E;
@@ -97,27 +93,19 @@ body {
     color: #fff;
 }
 
-
-
-
 /* List of repositories */
 
 .list {
-    display: grid;
     align-items: center;
     grid-template-rows: repeat(12, 104px);
     grid-row-gap: 16px;
-
-    position: absolute;
-    width: 357px;
-    height: 1424px;
-    left: 20px;
-    top: 90px;
 }
 
 .git-repo-tile {
-    width: 357px;
-    height: 104px;
+    width: 100%;
+    display: flex;
+    margin-bottom: 16px;
+
 
     border: 1.5px solid #D9D9D9;
     border-radius: 6px;
@@ -129,24 +117,15 @@ body {
 
 .git-repo-tile__content {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    width: 241px;
-    height: 59px;
-    left: 104px;
-    top: 23px;
+    padding: 21.5px 10.5px 20.5px 10.5px;
 }
 
-.git-repo-tile__content::before {
-    content: "K";
+.git-repo-tile__avatar {
     position: absolute;
-    display: block;
     width: 80px;
     height: 80px;
-    left: -92px;
-    top: -12px;
+    top: 10.5px;
+    left: 10.5px;
 
     font-size: 40px;
     color: #fff;
@@ -156,6 +135,16 @@ body {
 
     background-color: #FF5555;
     border-radius: 50%;
+}
+
+.git-repo-tile__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    width: 241px;
+    height: 59px;
+    margin-left: 92px;
 }
 
 .git-repo-tile__heading {
@@ -184,9 +173,9 @@ body {
 }
 
 .git-repo-tile__stats {
-    width: 156px;
     display: flex;
     justify-content: space-between;
+    padding-right: 85px;
 }
 
 .stars {
@@ -194,7 +183,7 @@ body {
     width: 42px;
 }
 
-.stars img {
+.stars__img {
     vertical-align: bottom;
     padding-right: 4px;
 
