--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,16 +1,16 @@
 @import "../../variables.scss";
 
-button {
+.button {
   @include square(50px, 6px);
 
   background: $red-color;
   border: none;
 }
 
-button:hover {
+.button:hover {
   opacity: 0.7;
 }
 
-button:disabled {
+.button:disabled {
   background: $light-gray-color;
 }
