--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <!--  -->
+    <div id="root"></div>
+    <!-- <script src="bundle.js" type="application/javascript"></script> -->
+    <!--  -->
 
     <div class="component">
 
