--- a/src/components/RepoTile/RepoTile.module.scss
+++ b/src/components/RepoTile/RepoTile.module.scss
@@ -1,103 +1,129 @@
 @import "../../variables.scss";
 
 .list {
-  align-items: center;
-  grid-template-rows: repeat(12, 104px);
-  grid-row-gap: 16px;
+    // align-items: center;
+    display: grid;
+    // grid-template-rows: repeat(12, 104px);
+    grid-template-rows: auto;
+    grid-row-gap: 16px;
+
+    max-width: 357px;
+    margin: 0 auto;
 }
 
 .repotile {
-  width: 100%;
-  display: flex;
-  margin-bottom: 16px;
-
-  border: $border;
-  border-radius: $border-radius;
-
-  &__avatar {
-    position: absolute;
-    @include square(80px, 50%);
-    top: 10.5px;
-    left: 10.5px;
-
-    font-size: 40px;
-    color: $white-color;
-    text-align: center;
-    padding: 20px;
-    font-weight: 700;
-    line-height: 10px;
-
-    background-color: $red-color;
-    text-transform: uppercase;
-
+    // width: 100%;
+    max-width: 357px;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // margin-bottom: 16px;
 
-    & img {
-      @include square(80px, 50%);
+    border: $border;
+    border-radius: $border-radius;
+
+    &__avatar {
+        // position: absolute;
+        @include square(80px, 50%);
+        // top: 10.5px;
+        // left: 10.5px;
+
+        font-size: 40px;
+        color: $white-color;
+        text-align: center;
+        padding: 20px;
+        font-weight: 700;
+        line-height: 10px;
+
+        background-color: $red-color;
+        text-transform: uppercase;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        margin-right: 20px;
+
+        & img {
+            @include square(80px, 50%);
+        }
     }
-  }
 
-  &__content {
-    position: relative;
-    padding: 21.5px 10.5px 20.5px 10.5px;
-  }
+    &__content {
+        // position: relative;
+        // padding: 21.5px 10.5px 20.5px 10.5px;
 
-  &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
 
-    width: 241px;
-    height: 59px;
-    margin-left: 92px;
-  }
+        padding: 12px;
 
-  &__heading {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-
-    color: $text-color;
-  }
-
-  &__orgLink {
-    text-decoration: none;
-  }
-
-  &__stats,
-  &__orgLink {
-    color: $gray-color;
-  }
-
-  &__stats {
-    display: flex;
-    justify-content: space-between;
-    padding-right: 65px;
-
-    &__stars {
-      display: inline-block;
-      width: 42px;
-
-      & svg {
-        vertical-align: bottom;
-        padding-right: 4px;
-
-        @include square(16px);
-      }
+        overflow: hidden;
     }
-  }
+
+    &__info {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        overflow: hidden;
+
+        // width: 241px;
+        // height: 59px;
+        // margin-left: 92px;
+    }
+
+    &__heading {
+        margin-bottom: 4px;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 19px;
+
+        color: $text-color;
+    }
+
+    &__orgLink {
+        text-decoration: none;
+        margin-bottom: 4px;
+    }
+
+    &__stats,
+    &__orgLink {
+        color: $gray-color;
+    }
+
+    &__stats {
+        display: flex;
+        // justify-content: space-between;
+        // padding-right: 65px;
+
+        justify-content: flex-start;
+        align-items: center;
+
+        &__stars {
+            display: inline-block;
+            margin-right: 20px;
+            // width: 42px;
+
+            & svg {
+                vertical-align: bottom;
+                padding-right: 4px;
+
+                @include square(16px);
+            }
+        }
+    }
 }
 
 .repotile:hover {
-  box-shadow: 0px 2px 6px $repotile-hover;
+    box-shadow: 0px 2px 6px $repotile-hover;
 }
 
 .repotile__orgLink:hover {
-  color: $org-link-color;
+    color: $org-link-color;
 }
